# joinem

./: CITATION.cff  Dockerfile  LICENSE  README.md  lint.sh  pyproject.toml  requirements.sh  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml
joinem/: __init__.py  __main__.py  _dataframe_cli.py
tests/: joinem  make_assets.py  test_smoke.sh
tests/assets/: empty_x.0.fea  empty_x.0.pqt  empty_x.1.json  empty_y.0.json  empty_y.1.pqt  empty_y.2.feather  horizontal1.pqt  horizontal2.pqt  x.0.fea  x.1.csv  x.2.json  x.2.pqt  y.1.fea  y.2.csv  y.2.json  y.2.pqt  z.0.csv  z.1.csv
