[project]
name = "joinem"
version = "0.0.0"
description = "CLI for fast, flexbile concatenation of tabular data using polars."
authors = [
    { name = "Matthew Andres moreno", email = "m.more500@gmail.com" },
]
keywords = ["polars", "data processing", "CSV", "parquet", "data science"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
license = {text = "MIT license"}
dependencies = [
  "polars",
  "tqdm",
]

[project.scripts]
joinem = "joinem:main"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
homepage = "https://github.com/mmore500/joinem"
documentation = "https://github.com/mmore500/joinem"
repository = "https://github.com/mmore500/joinem"
tracker = "https://github.com/mmore500/joinem/issues"

[project.optional-dependencies]
testing = [
    "black==22.10.0",
    "isort==5.12.0",
    "ruff==0.11.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
namespaces = false

# adapted from https://tox.wiki/en/latest/example/package.html
[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "cython>=0.29",
  "setuptools >= 35.0.2",
  "setuptools_scm >= 2.0.0, <3",
]

[tool.black]
line_length = 79

[tool.isort]
force_sort_within_sections = true
line_length = 79
profile = "black"
skip_gitignore = true
